--- a/style.css
+++ b/style.css
@@ -4,11 +4,30 @@
 	box-sizing: border-box;
 	font-family: Arial, Helvetica, sans-serif;
 }
-html{
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #7bccff9d;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #0a2d42e8;
+    transition: all 0.3s;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #0a2d42b0
+}
+
+html {
 	scroll-behavior: smooth;
 }
+
 .container {
 	position: relative;
+	margin-bottom: 100px;
 }
 
 .status {
@@ -105,14 +124,17 @@ header.scrolled {
 	display: flex;
 	flex-direction: column;
 }
-.site-content .image-content .overlay h1{
+
+.site-content .image-content .overlay h1 {
 	font-size: 30px;
 }
-.arrow-active{
+
+.arrow-active {
 	position: relative;
 }
-.arrow-active i{
-	position:fixed ;
+
+.arrow-active i {
+	position: fixed;
 	border-radius: 50%;
 	display: none;
 	background-color: rgb(170, 170, 170);
@@ -122,18 +144,23 @@ header.scrolled {
 	z-index: 12;
 	transition: all 0.2s ease-in;
 }
-.arrow-active i.sc-arrow{
+
+.arrow-active i.sc-arrow {
 	display: block;
 	animation: moveUp 1s infinite forwards;
 }
+
 @keyframes moveUp {
-	0%{
+	0% {
 		transform: translateY(10px);
 	}
-	100%{
+
+	100% {
 		transform: translateY(0px);
+		background-color: rgb(214, 210, 210);
 	}
 }
+
 .site-content .image-content {
 	position: relative;
 }
@@ -143,9 +170,9 @@ header.scrolled {
 	width: 100%;
 	background-image: url('https://cdn2.hubspot.net/hubfs/4801849/TechnoShots/assignment/background-image.jpg');
 	background-attachment: fixed;
-	-webkit-box-shadow: inset 0px -1px 38px -17px rgba(255,255,255,1);
-    -moz-box-shadow: inset 0px -1px 38px -17px rgba(255,255,255,1);
-	box-shadow: inset 0px -1px 38px -17px rgba(255,255,255,1);
+	-webkit-box-shadow: inset 0px -1px 38px -17px rgba(255, 255, 255, 1);
+	-moz-box-shadow: inset 0px -1px 38px -17px rgba(255, 255, 255, 1);
+	box-shadow: inset 0px -1px 38px -17px rgba(255, 255, 255, 1);
 }
 
 .site-content .image-content .overlay {
@@ -183,9 +210,11 @@ header.scrolled {
 	0% {
 		left: 100%;
 	}
-	50%{
+
+	50% {
 		color: rgba(0, 69, 134, 0.89);
 	}
+
 	100% {
 		left: -30%;
 	}
@@ -212,49 +241,57 @@ header.scrolled {
 #about .ab-lg-cd p {
 	margin-top: 10px;
 }
-.card-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+
+.card-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-top: 50px;
 }
-.inside-card-container{
-    display: flex;
-    justify-content:center;
-    flex-wrap: wrap;
+
+.inside-card-container {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
 }
-.inside-card-container .card img{
-    width: 100%;
-    height: 250px;
+
+.inside-card-container .card img {
+	width: 100%;
+	height: 250px;
 }
-.inside-card-container .card{
-    width: 328px;
-    height: 100%;
-    text-align: center;
-    position: relative;
-    margin: 5px;
+
+.inside-card-container .card {
+	width: 330px;
+	height: 100%;
+	text-align: center;
+	position: relative;
+	margin: 5px;
 }
-.inside-card-container .card .overlay{
-    position: absolute;
-    top: 0px;
-    width: 100%;
-    opacity: 0;
-    border: 1px solid transparent;
-    line-height: 25px;
-    height:250px;
-    padding:5px;
-    text-align: left;
-    background-color: rgba(156, 156, 156, 0.555);
-    backdrop-filter: blur(5px);
-    transition: all 0.5s ease-in-out;
-    transform: rotate3d(0, 1, 0, 180deg);
+
+.inside-card-container .card .overlay {
+	position: absolute;
+	top: 0px;
+	width: 100%;
+	opacity: 0;
+	border: 1px solid transparent;
+	line-height: 25px;
+	height: 250px;
+	padding: 5px;
+	text-align: left;
+	background-color: rgba(156, 156, 156, 0.555);
+	backdrop-filter: blur(5px);
+	transition: all 0.5s ease-in-out;
+	transform: rotate3d(0, 1, 0, 180deg);
 }
-.inside-card-container .card:hover .overlay{
-    opacity: 1;
-    border: 1px dashed green;
-    background-color: rgba(255, 255, 255, 0.712);
-    transform: rotate3d(0, 1, 0, 360deg);
+
+.inside-card-container .card:hover .overlay {
+	opacity: 1;
+	border: 1px dashed green;
+	background-color: rgba(255, 255, 255, 0.712);
+	transform: rotate3d(0, 1, 0, 360deg);
 }
+
 .order-section {
 	width: 100%;
 }
@@ -263,77 +300,78 @@ header.scrolled {
 .footer {
 	background-color: #0a2d42e8;
 	padding: 40px 0;
-	color: white;
-  }
-  
-  .container {
+	color: rgb(201, 200, 200);
+}
+
+.ft-container {
 	max-width: 1200px;
 	margin: 0 auto;
 	padding: 0 20px;
-  }
-  
-  .footer-content {
+}
+
+.footer-content {
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
-  }
-  
-  .footer-section {
+}
+
+.footer-section {
 	width: 30%;
 	margin-bottom: 20px;
-  }
-  
-  .footer-heading {
+}
+
+.footer-heading {
 	font-size: 18px;
 	font-weight: bold;
 	margin-bottom: 10px;
-  }
-  
-  .footer-text {
+}
+
+.footer-text {
 	font-size: 14px;
 	line-height: 1.5;
-  }
-  
-  .contact-list {
+}
+
+.contact-list {
 	list-style: none;
 	padding: 0;
 	margin: 0;
-  }
-  
-  .contact-list li {
+}
+
+.contact-list li {
 	font-size: 14px;
 	margin-bottom: 5px;
-  }
-  
-  .hours-list {
+}
+
+.hours-list {
 	list-style: none;
 	padding: 0;
 	margin: 0;
-  }
-  
-  .hours-list li {
+}
+
+.hours-list li {
 	font-size: 14px;
 	margin-bottom: 5px;
-  }
-  
-  .hours-list span {
+}
+
+.hours-list span {
 	font-weight: bold;
 	margin-right: 5px;
-  }
-  
-  .footer-bottom {
+}
+
+.footer-bottom {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	margin-top: 20px;
 	border-top: 1px solid #ddd;
 	padding-top: 20px;
-  }
-  
-  .social-media .social-link {
+}
+
+.social-media .social-link {
 	color: #666;
-	font-size: 18px;
+	font-size: 20px;
 	margin-right: 10px;
-  }
-  
-  
+}
+.social-media .social-link:hover{
+	color: rgb(194, 194, 194);
+}
