--- a/style.css
+++ b/style.css
@@ -132,15 +132,13 @@ header.scrolled {
 	width: 100%;
 	height: 112vh;
 	left: -415px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	display: block;
 	backdrop-filter: blur(2px);
-	align-items: center;
 	transition: all 0.5s ease-in-out;
 	background-color: rgba(255, 255, 255, 0.747);
 }
 .sidebar .links{
+	transform: translate(50%,150%);
 	display: flex;
 	flex-direction: column;
 	justify-content: left;
@@ -274,7 +272,6 @@ header.scrolled {
 #about {
 	margin-top: 20px;
 	display: flex;
-	justify-conent: space-between;
 	padding: 0px 80px;
 }
 #abou .cd{
