--- a/style.css
+++ b/style.css
@@ -128,11 +128,11 @@ header.scrolled {
 }
 .sidebar{
 	position: absolute;
-	z-index: 0;
+	z-index: 2;
 	width: 100%;
 	height: 112vh;
 	left: -415px;
-	display: block;
+	display: none;
 	backdrop-filter: blur(2px);
 	transition: all 0.5s ease-in-out;
 	background-color: rgba(255, 255, 255, 0.747);
